--- a/demo/cssSample.css
+++ b/demo/cssSample.css
@@ -38,10 +38,30 @@ table.table1 tbody th{
 	background-color:#ffffff;
 }
 
+table.table1 tbody th>div {border:1px solid black;}
+
+
+
 .address{
 	position:fixed;
 	text-align:center;
 }
 .div_form{
 	border:1px solid black;
+}
+
+ol{border:1px solid black;}
+li{	font-size:12px;
+	color:#000;}
+a:hover{color:red;
+	text-decoration:overline;}
+li p{color: blue; 
+	font-weight:bolder;
+	display:inline;}
+
+
+div >.name{color:yellow;
+	display:inline;
+	position:absolutel
+	left:0;
 }
